--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/memoize-one": "^4.1.1",
     "gulp": "^4.0.2",
     "prettier": "^1.18.2",
     "require-dir": "^1.2.0",
-    "rollup": "^1.19.4",
-    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup": "^2.38.4",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-entrypoint-hashmanifest": "^0.1.2",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.1",
-    "rollup-plugin-typescript2": "^0.22.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.29.0",
     "serve": "^11.1.0",
-    "typescript": "^3.5.3"
+    "typescript": "^4.0.3"
   },
   "dependencies": {
     "@material/mwc-button": "^0.20.0",
+    "@material/mwc-checkbox": "^0.20.0",
+    "@material/mwc-formfield": "^0.20.0",
     "@polymer/paper-input": "^3.2.1",
-    "lit-element": "^2.2.1",
-    "memoize-one": "^5.1.1"
+    "lit-element": "^2.2.1"
   }
 }
