--- a/src/html/index.html.template
+++ b/src/html/index.html.template
@@ -33,6 +33,7 @@
         background-color: #e5e5e5;
         --primary-color: #03a9f4;
         --mdc-theme-primary: #03a9f4;
+        --mdc-theme-secondary: #03a9f4;
       }
     </style>
   </head>
@@ -40,7 +41,7 @@
     <my-main></my-main>
 
     <script type="module" crossorigin="use-credentials">
-      import "./{{ entrypoint }}";
+      import "/{{ entrypoint }}";
     </script>
   </body>
 </html>
