--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "gulp": "^4.0.2",
     "prettier": "^1.18.2",
     "require-dir": "^1.2.0",
