--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
+    "@rollup/plugin-typescript": "^8.1.1",
     "gulp": "^4.0.2",
     "prettier": "^1.18.2",
     "require-dir": "^1.2.0",
     "rollup": "^2.38.4",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-entrypoint-hashmanifest": "^0.1.2",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.29.0",
     "serve": "^11.1.0",
     "typescript": "^4.0.3"
   },
