--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@braintree/sanitize-url": "^5.0.0",
     "@material/mwc-button": "^0.20.0",
     "@material/mwc-checkbox": "^0.20.0",
     "@material/mwc-formfield": "^0.20.0",
-    "@polymer/paper-input": "^3.2.1",
+    "@material/mwc-textfield": "^0.20.0",
     "lit-element": "^2.2.1"
   }
 }
