--- a/src/html/faq.html.template
+++ b/src/html/faq.html.template
@@ -54,7 +54,7 @@
       <div class="section-header">What is My Home Assistant?</div>
       <div class="card-content">
         <p>
-          My Home Assistant Cast allows you to...
+          My Home Assistant allows you to...
         </p>
       </div>
     </my-layout>
