--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@11ty/eleventy": "^0.11.1",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-typescript": "^8.1.1",
-    "gulp": "^4.0.2",
     "prettier": "^1.18.2",
     "require-dir": "^1.2.0",
     "rollup": "^2.38.4",
