--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@material/mwc-button": "^0.20.0",
     "@material/mwc-select": "^0.20.0",
     "@material/mwc-textfield": "^0.20.0",
-    "copy-to-clipboard": "^3.3.1",
+    "clipboard-copy": "^4.0.1",
     "lit-element": "^2.4.0"
   }
 }
