--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@material/mwc-select": "^0.20.0",
     "@material/mwc-textfield": "^0.20.0",
     "clipboard-copy": "^4.0.1",
+    "html-minifier-terser": "^5.1.1",
     "lit-element": "^2.4.0"
   }
 }
