--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "src/entrypoint.ts",
   "scripts": {
-    "test": "node test/badges.js && node test/redirects.js"
+    "test": "node test/badges.js && node test/redirects.js",
+    "precommit-redirect": "node build-scripts/sort-redirects.js && git add redirect.json",
+    "precommit-badges": "node build-scripts/create-badges.js && git add public/badges"
   },
+  "pre-commit": ["precommit-redirect", "precommit-badges"],
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
@@ -22,7 +25,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^11.3.2",
     "svgo": "^2.2.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "pre-commit": "^1.2.2"
   },
   "dependencies": {
     "@braintree/sanitize-url": "^5.0.0",
