De-duplicate reactive-element

--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "clipboard-copy": "^4.0.1",
     "html-minifier-terser": "^6.0.2",
     "lit": "^2.0.0"
+  },
+  "resolutions": {
+    "@lit/reactive-element": "1.0.0"
   }
 }
