--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-node_modules
 dist
 .rpt2_cache
 .DS_Store
 manifest.json
 build
-yarn-error.log
 .vscode/settings.json
+
+# yarn
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+/node_modules/
+yarn-error.log
+npm-debug.log
