--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.4",
-    "anafanafo": "^2.0.0",
     "gulp": "^4.0.2",
     "pre-commit": "^1.2.2",
     "prettier": "^3.0.3",
@@ -29,6 +28,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^14.2.1",
     "svgo": "^3.0.2",
+    "text-to-svg": "^3.1.5",
     "typescript": "^5.2.2"
   },
   "dependencies": {
