--- a/package.json
+++ b/package.json
@@ -33,15 +33,10 @@
   },
   "dependencies": {
     "@braintree/sanitize-url": "^6.0.4",
-    "@material/mwc-button": "^0.27.0",
-    "@material/mwc-select": "^0.27.0",
-    "@material/mwc-textfield": "^0.27.0",
+    "@material/web": "^1.0.1",
     "clipboard-copy": "^4.0.1",
     "html-minifier-terser": "^7.2.0",
-    "lit": "^3.0.2"
-  },
-  "resolutions": {
-    "@lit/reactive-element": "1.3.2"
+    "lit": "^3.1.0"
   },
   "packageManager": "yarn@3.6.3"
 }
