--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,8 @@
 {
-    "name": "My Home Assistant",
-    "image": "mcr.microsoft.com/vscode/devcontainers/typescript-node:22",
-    "postCreateCommand": "yarn install",
-    "context": "..",
-    "appPort": 5000,
-    "extensions": [
-        "esbenp.prettier-vscode",
-      ],
+  "name": "My Home Assistant",
+  "image": "mcr.microsoft.com/vscode/devcontainers/typescript-node:22",
+  "postCreateCommand": "yarn install",
+  "context": "..",
+  "appPort": 5000,
+  "extensions": ["esbenp.prettier-vscode"]
 }
