--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,8 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# This workflow will:
+# - do a clean install of node dependencies
+# - build the source code
+# - run tests across different versions of node
+# - ensure the code is formatted
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: CI
@@ -22,3 +26,4 @@ jobs:
           cache: yarn
       - run: yarn install --immutable
       - run: npm test
+      - run: npm run format:check
