--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "main": "src/entrypoint.ts",
   "scripts": {
     "format": "npx prettier -w .",
+    "format:check": "npx prettier --list-different .",
     "lint:types": "tsc",
     "lint": "yarn run lint:types",
     "test": "node test/badges.js && node test/redirects.js",
-    "precommit-redirect": "node build-scripts/sort-redirects.js && git add redirect.json",
+    "precommit-redirect": "node build-scripts/sort-redirects.js && npx prettier -w redirect.json && git add redirect.json",
     "precommit-badges": "node build-scripts/create-badges.js && git add public/badges"
   },
   "pre-commit": [
